[gd_scene load_steps=5 format=3 uid="uid://dre1tgkucoumb"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_7lb78"]
[ext_resource type="FontFile" uid="uid://5yg3f0r12k0l" path="res://UIAssets/roundfont.ttf" id="1_aisr6"]

[sub_resource type="LabelSettings" id="LabelSettings_2i2ne"]
font = ExtResource("1_aisr6")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_nawju"]
font = ExtResource("1_aisr6")
font_size = 38

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7lb78")

[node name="MenuButtons" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.13
anchor_top = 0.231
anchor_right = 0.13
anchor_bottom = 0.231
offset_left = 0.23999
offset_top = 0.311996
offset_right = 200.24
offset_bottom = 120.312
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="MenuButtons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.417
offset_bottom = -0.0400047
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="MenuButtons/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Now"
label_settings = SubResource("LabelSettings_2i2ne")

[node name="LeaderboardButton" type="Button" parent="MenuButtons"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0400085
grow_vertical = 0
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="MenuButtons/LeaderboardButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "Leaderboard"
label_settings = SubResource("LabelSettings_nawju")
